# linglong-dbus-proxy

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  DBus.cpp  DBus.h  Descriptor.cpp  Descriptor.h  Handle.cpp  Handle.h  LocalServer.cpp  LocalServer.h  LocalSocket.cpp  LocalSocket.h  NonCopyable.h  Poll.cpp  Poll.h  main.cpp
